Вставил таблицу с геометрией (доделать)

--- a/products/nukeproof-mega-team.html
+++ b/products/nukeproof-mega-team.html
@@ -25,45 +25,111 @@
                 </ul>
             </nav>
         </header>
-        <h1>Nukeproof Mega 275 Team (2016)</h1>
-        <a href="../img/mega-275-team.jpg" target="_blank">
-            <img class="main-item-image" src="../img/mega-275-team.jpg" width="480px" height="320" alt="Nukeproof Mega 275 Team (2016)" title="Nukeproof Mega 275 Team (2016)">
-        </a>
-        <section class="short-description description">
-            <h2>Описание товара</h2>
-            <p>Настоящий гоночный байк для настоящих гор!</p>
-        </section>
-        <section class="features description">
-            <h2>Характеристики товара</h2>
-            <ul>
-               <li>Рама: Custom hydroformed T6 6061 aluminium</li>
-               <li>Вилка: Rockshox Pike RCT3, 27.5", Solo Air, Black, 160mm</li>
-               <li>Рулевая колонка:	Nukeproof 44-56IITS</li>
-               <li>Руль: Nukeproof Warhead 760 Riser; 760mm wide, 20mm rise</li>
-               <li>Вынос руля: Nukeproof Warhead, 31.8mm</li>
-               <li>Грипсы: Nukeproof Element single lock-on</li>
-               <li>Трансмиссия: SRAM X0-1, Carbon, 170mm, 32T</li>
-               <li>Цепь: SRAM PC-X1</li>
-               <li>Кассета: SRAM XG-1175, 10-42T</li>
-               <li>Манетки: SRAM X0-1, 11spd, Black</li>
-               <li>Задний переключатель: SRAM X0-1 11spd, Black</li>
-               <li>Успокоитель цепи: E-13 LG-1</li>
-               <li>Тормоза: SRAM Guide RSC, 180mm</li>
-               <li>Седло: Nukeproof Vector AM, CrN-Ti, Black/Yellow</li>
-               <li>Подседельный штырь: Rockshox Reverb Stealth, 150mm, Black</li>
-               <li>Покрышка (перед): Schwalbe Magic Mary, 27.5", 2.35, TSC</li>
-               <li>Покрышка (зад): Schwalbe Nobby Nic, 27.5", 2.35, PSC</li>
-               <li>Колеса: SRAM Rail 50, Yellow/Black</li>
-               <li>Вес: TBC</li>
-            </ul>
-        </section>
-        <section class="detailed-description description">
-            <h2>Подробное описание</h2>
-            <p>С&nbsp;богатой историей в&nbsp;создании производительности горного велосипеда продукты, Nukeproof очень гордимся тем, чтобы представить свои самые убедительные все горные&nbsp;/ эндуро велосипед, созданный на&nbsp;сегодняшний день. Новый 2016&nbsp;MEGA.</p>
-            <p>С&nbsp;1999 года печально известной Megavalanche гонки, которая начинается с&nbsp;самой высокой точки на&nbsp;Pic Blanc (3300м) над деревней Альп д&rsquo;Юэз является синонимом всей горной ездой и&nbsp;высочайший уровень истинного горного велосипеда гонок. Задуманный первоначально в&nbsp;2009 году командой разработчиков на&nbsp;Nukeproof в&nbsp;попытке построить идеальный велосипед для этого точного стиля гонок, Мега родился.</p>
-            <p>Изысканная и&nbsp;улучшилось с&nbsp;тех пор, Мега превратилась в&nbsp;идеальный все горы и&nbsp;эндуро гонки на&nbsp;велосипеде. Доступные в&nbsp;настоящее время как &laquo;вариант на&nbsp;каждый день гонщиков, которые хотят выдвинуть свои пределы, и&nbsp;150&nbsp;мм 29&raquo; 160мм 27.5 вариант для тех, у&nbsp;кого есть аппетит к&nbsp;отъявленные скорости на&nbsp;любой местности.</p>
-            <p>Новые Mega команды уважают, и&nbsp;блюда из&nbsp;наград в&nbsp;spadefuls!</p>
-        </section>
+        <main>
+            <h1>Nukeproof Mega 275 Team (2016)</h1>
+            <a href="../img/mega-275-team.jpg" target="_blank">
+                <img class="main-item-image" src="../img/mega-275-team.jpg" width="480px" height="320" alt="Nukeproof Mega 275 Team (2016)" title="Nukeproof Mega 275 Team (2016)">
+            </a>
+            <section class="short-description description">
+                <h2>Описание товара</h2>
+                <p>Настоящий гоночный байк для настоящих гор!</p>
+            </section>
+            <section class="features description">
+                <h2>Характеристики товара</h2>
+                <ul>
+                   <li>Рама: Custom hydroformed T6 6061 aluminium</li>
+                   <li>Вилка: Rockshox Pike RCT3, 27.5", Solo Air, Black, 160mm</li>
+                   <li>Рулевая колонка:	Nukeproof 44-56IITS</li>
+                   <li>Руль: Nukeproof Warhead 760 Riser; 760mm wide, 20mm rise</li>
+                   <li>Вынос руля: Nukeproof Warhead, 31.8mm</li>
+                   <li>Грипсы: Nukeproof Element single lock-on</li>
+                   <li>Трансмиссия: SRAM X0-1, Carbon, 170mm, 32T</li>
+                   <li>Цепь: SRAM PC-X1</li>
+                   <li>Кассета: SRAM XG-1175, 10-42T</li>
+                   <li>Манетки: SRAM X0-1, 11spd, Black</li>
+                   <li>Задний переключатель: SRAM X0-1 11spd, Black</li>
+                   <li>Успокоитель цепи: E-13 LG-1</li>
+                   <li>Тормоза: SRAM Guide RSC, 180mm</li>
+                   <li>Седло: Nukeproof Vector AM, CrN-Ti, Black/Yellow</li>
+                   <li>Подседельный штырь: Rockshox Reverb Stealth, 150mm, Black</li>
+                   <li>Покрышка (перед): Schwalbe Magic Mary, 27.5", 2.35, TSC</li>
+                   <li>Покрышка (зад): Schwalbe Nobby Nic, 27.5", 2.35, PSC</li>
+                   <li>Колеса: SRAM Rail 50, Yellow/Black</li>
+                   <li>Вес: TBC</li>
+                </ul>
+            </section>
+            <section class="frame-geometry description">
+                <h2>Геометрия</h2>
+                <img src="../img/geometry-mega-275-team.png" alt="Геометрия рамы" title="Геометрия рамы" width="480" height="334">
+                <table>
+                    <tr>
+                        <th class="double-th">Key</th>
+                        <th>Small</th>
+                        <th>Medium</th>
+                        <th>Large</th>
+                        <th>Extra Large</th>
+                    </tr>
+                    <tr>
+                        <th>ST</th>
+                        <td>381/15"</td>
+                        <td>"420/16.5"</td>
+                        <td>458/18"</td>
+                        <td>508/20"</td>
+                    </tr>
+                    <tr>
+                        <th>TTe</th>
+                        <td>560</td>
+                        <td>585</td>
+                        <td>611</td>
+                        <td>632</td>
+                    </tr>
+                    <tr>
+                        <th>HT</th>
+                        <td>105</td>
+                        <td>105</td>
+                        <td>110</td>
+                        <td>115</td>
+                    </tr>
+                    <tr>
+                        <th>Ha</th>
+                        <td colspan="4">65</td>
+                    </tr>
+                    <tr>
+                        <th>WB</th>
+                        <td>1162</td>
+                        <td>1187</td>
+                        <td>1214</td>
+                        <td>1236</td>
+                    </tr>
+                    <tr>
+                        <th>CS</th>
+                        <td colspan="4">435</td>
+                    </tr>
+                    <tr>
+                        <th>STa</th>
+                        <td colspan="4">75.5</td>
+                    </tr>
+                    <tr>
+                        <th>BB</th>
+                        <td colspan="4">-10</td>
+                    </tr>
+                    <tr>
+                        <th>Re</th>
+                        <td>410</td>
+                        <td>435</td>
+                        <td>460</td>
+                        <td>480</td>
+                    </tr>
+                </table>
+            </section>
+            <section class="detailed-description description">
+                <h2>Подробное описание</h2>
+                <p>С&nbsp;богатой историей в&nbsp;создании производительности горного велосипеда продукты, Nukeproof очень гордимся тем, чтобы представить свои самые убедительные все горные&nbsp;/ эндуро велосипед, созданный на&nbsp;сегодняшний день. Новый 2016&nbsp;MEGA.</p>
+                <p>С&nbsp;1999 года печально известной Megavalanche гонки, которая начинается с&nbsp;самой высокой точки на&nbsp;Pic Blanc (3300м) над деревней Альп д&rsquo;Юэз является синонимом всей горной ездой и&nbsp;высочайший уровень истинного горного велосипеда гонок. Задуманный первоначально в&nbsp;2009 году командой разработчиков на&nbsp;Nukeproof в&nbsp;попытке построить идеальный велосипед для этого точного стиля гонок, Мега родился.</p>
+                <p>Изысканная и&nbsp;улучшилось с&nbsp;тех пор, Мега превратилась в&nbsp;идеальный все горы и&nbsp;эндуро гонки на&nbsp;велосипеде. Доступные в&nbsp;настоящее время как &laquo;вариант на&nbsp;каждый день гонщиков, которые хотят выдвинуть свои пределы, и&nbsp;150&nbsp;мм 29&raquo; 160мм 27.5 вариант для тех, у&nbsp;кого есть аппетит к&nbsp;отъявленные скорости на&nbsp;любой местности.</p>
+                <p>Новые Mega команды уважают, и&nbsp;блюда из&nbsp;наград в&nbsp;spadefuls!</p>
+            </section>
+        </main>
         <footer class="page-footer">
             <div class="copyright">
                 &copy; &laquo;BikeGang&raquo;, 2016. Все права защищены.
