Переименовано изображение геометрии рамы

--- a/products/nukeproof-mega-team.html
+++ b/products/nukeproof-mega-team.html
@@ -60,7 +60,7 @@
             </section>
             <section class="frame-geometry description">
                 <h2>Геометрия</h2>
-                <img src="../img/geometry-mega-275-team.png" alt="Геометрия рамы" title="Геометрия рамы" width="480" height="334">
+                <img src="../img/geometry.png" alt="Геометрия рамы" title="Геометрия рамы" width="480" height="334">
                 <table>
                     <tr>
                         <th class="side-header double-th">Key</th>
