--- a/products/giant-reign-1.html
+++ b/products/giant-reign-1.html
@@ -62,6 +62,70 @@
                     [R] Schwalbe Hans Dampf 27.5x2.35" Snakeskin, TL Easy, Pace Star</li>
             </ul>
         </section>
+        <section class="frame-geometry description">
+                <h2>Геометрия</h2>
+                <img src="../img/geometry.png" alt="Геометрия рамы" title="Геометрия рамы" width="480" height="334">
+                <table>
+                    <tr>
+                        <th class="side-header double-th">Key</th>
+                        <th>Small</th>
+                        <th>Medium</th>
+                        <th>Large</th>
+                        <th>Extra Large</th>
+                    </tr>
+                    <tr>
+                        <th class="side-header">ST</th>
+                        <td>381/15"</td>
+                        <td>"420/16.5"</td>
+                        <td>458/18"</td>
+                        <td>508/20"</td>
+                    </tr>
+                    <tr>
+                        <th class="side-header">TTe</th>
+                        <td>560</td>
+                        <td>585</td>
+                        <td>611</td>
+                        <td>632</td>
+                    </tr>
+                    <tr>
+                        <th class="side-header">HT</th>
+                        <td>105</td>
+                        <td>105</td>
+                        <td>110</td>
+                        <td>115</td>
+                    </tr>
+                    <tr>
+                        <th class="side-header">Ha</th>
+                        <td colspan="4">65</td>
+                    </tr>
+                    <tr>
+                        <th class="side-header">WB</th>
+                        <td>1162</td>
+                        <td>1187</td>
+                        <td>1214</td>
+                        <td>1236</td>
+                    </tr>
+                    <tr>
+                        <th class="side-header">CS</th>
+                        <td colspan="4">435</td>
+                    </tr>
+                    <tr>
+                        <th class="side-header">STa</th>
+                        <td colspan="4">75.5</td>
+                    </tr>
+                    <tr>
+                        <th class="side-header">BB</th>
+                        <td colspan="4">-10</td>
+                    </tr>
+                    <tr>
+                        <th class="side-header">Re</th>
+                        <td>410</td>
+                        <td>435</td>
+                        <td>460</td>
+                        <td>480</td>
+                    </tr>
+                </table>
+            </section>
         <section class="detailed-description description">
             <h2>Подробное описание</h2>
             <ul>
