Добавлена таблица Giant. Внесены мелкие правки

--- a/products/giant-reign-1.html
+++ b/products/giant-reign-1.html
@@ -25,121 +25,103 @@
                 </ul>
             </nav>
         </header>
-        <h1>Giant Reign 1 (2016)</h1>
-        <a href="../img/reign-275-1.jpg" target="_blank">
-            <img class="main-item-image" src="../img/reign-275-1.jpg" width="480px" height="320" alt="Giant Reign 1 (2016)" title="Giant Reign 1 (2016)">
-        </a>
-        <section class="short-description description">
-            <h2>Описание товара</h2>
-            <p>В&nbsp;основе этого агрессивного велосипеда лежит ALUXX&nbsp;SL-рама, переработанная с&nbsp;нуля под 27.5-дюймовую технологию колеса. Фреймсет Reign&nbsp;27.5 задает технологиям аллюминиевых полно-подвесных велосипедов новую планку веса, прочности и&nbsp;производительности, используя максимум от&nbsp;этого превосходного размера колеса.</p>
-        </section>
-        <section class="features description">
-            <h2>Характеристики товара</h2>
-            <ul>
-                <h3>Рама</h3>
-                <li>Размеры: S, M, L, XL</li>
-                <li>Цвета: Black/Charcoal</li>
-                <li>Конструкция: ALUXX SL-Grade Aluminum, 6.3"/160mm Maestro Suspension</li>
-                <li>Вилка: RockShox Pike RCT3 Solo Air, 160mm travel, 15mm Thru-Axle, Giant Custom 46mm Offset</li>
-                <li>Амортизатор: RockShox Monarch Plus Debonair RC3</li>
-                <h3>Компоненты</h3>
-                <li>Руль: Giant Contact SL DH, 800x31.8mm</li>
-                <li>Вынос: Truvativ Holzfeller (40-60mm)</li>
-                <li>Подседельный Штырь: RockShox Reverb Stealth, 30.9mm, 125mm (M-XL) 100mm (S)</li>
-                <li>Седло: Giant Contact SL Neutral, Ti rail</li>
-                <h3>Трансмиссия</h3>
-                <li>Манетки: SRAM X1 Trigger, Rear Only, 1x11</li>
-                <li>Задний: Переключатель SRAM X1, Type-2</li>
-                <li>Тормоза: SRAM Guide RS, [F] 200mm [R] 180mm</li>
-                <li>Тормозные Ручки: SRAM Guide RS</li>
-                <li>Кассета: SRAM XG1180 10-42, 11-speed</li>
-                <li>Цепь: KMC X11L</li>
-                <li>Система: SRAM X1, 32T w/ MRP AMG Guide</li>
-                <li>Каретка: SRAM Press Fit</li>
-                <h3>Колеса</h3>
-                <li>Обода: DT Swiss M 1700 Spline WheelSystem, 15mm front, 142x12 rear</li>
-                <li>Покрышки: Schwalbe Magic Mary 27.5x2.35" Snakeskin, TL Easy, Trail Star<br>
-                    [R] Schwalbe Hans Dampf 27.5x2.35" Snakeskin, TL Easy, Pace Star</li>
-            </ul>
-        </section>
-        <section class="frame-geometry description">
+        <main>
+            <h1>Giant Reign 1 (2016)</h1>
+            <a href="../img/reign-275-1.jpg" target="_blank">
+                <img class="main-item-image" src="../img/reign-275-1.jpg" width="480px" height="320" alt="Giant Reign 1 (2016)" title="Giant Reign 1 (2016)">
+            </a>
+            <section class="short-description description">
+                <h2>Описание товара</h2>
+                <p>В&nbsp;основе этого агрессивного велосипеда лежит ALUXX&nbsp;SL-рама, переработанная с&nbsp;нуля под 27.5-дюймовую технологию колеса. Фреймсет Reign&nbsp;27.5 задает технологиям аллюминиевых полно-подвесных велосипедов новую планку веса, прочности и&nbsp;производительности, используя максимум от&nbsp;этого превосходного размера колеса.</p>
+            </section>
+            <section class="features description">
+                <h2>Характеристики товара</h2>
+                <ul>
+                    <h3>Рама</h3>
+                    <li>Размеры: S, M, L, XL</li>
+                    <li>Цвета: Black/Charcoal</li>
+                    <li>Конструкция: ALUXX SL-Grade Aluminum, 6.3"/160mm Maestro Suspension</li>
+                    <li>Вилка: RockShox Pike RCT3 Solo Air, 160mm travel, 15mm Thru-Axle, Giant Custom 46mm Offset</li>
+                    <li>Амортизатор: RockShox Monarch Plus Debonair RC3</li>
+                    <h3>Компоненты</h3>
+                    <li>Руль: Giant Contact SL DH, 800x31.8mm</li>
+                    <li>Вынос: Truvativ Holzfeller (40-60mm)</li>
+                    <li>Подседельный Штырь: RockShox Reverb Stealth, 30.9mm, 125mm (M-XL) 100mm (S)</li>
+                    <li>Седло: Giant Contact SL Neutral, Ti rail</li>
+                    <h3>Трансмиссия</h3>
+                    <li>Манетки: SRAM X1 Trigger, Rear Only, 1x11</li>
+                    <li>Задний: Переключатель SRAM X1, Type-2</li>
+                    <li>Тормоза: SRAM Guide RS, [F] 200mm [R] 180mm</li>
+                    <li>Тормозные Ручки: SRAM Guide RS</li>
+                    <li>Кассета: SRAM XG1180 10-42, 11-speed</li>
+                    <li>Цепь: KMC X11L</li>
+                    <li>Система: SRAM X1, 32T w/ MRP AMG Guide</li>
+                    <li>Каретка: SRAM Press Fit</li>
+                    <h3>Колеса</h3>
+                    <li>Обода: DT Swiss M 1700 Spline WheelSystem, 15mm front, 142x12 rear</li>
+                    <li>Покрышки: Schwalbe Magic Mary 27.5x2.35" Snakeskin, TL Easy, Trail Star<br>
+                        [R] Schwalbe Hans Dampf 27.5x2.35" Snakeskin, TL Easy, Pace Star</li>
+                </ul>
+            </section>
+            <section class="frame-geometry description">
                 <h2>Геометрия</h2>
                 <img src="../img/geometry.png" alt="Геометрия рамы" title="Геометрия рамы" width="480" height="334">
                 <table>
                     <tr>
-                        <th class="side-header double-th">Key</th>
-                        <th>Small</th>
-                        <th>Medium</th>
-                        <th>Large</th>
-                        <th>Extra Large</th>
+                        <th class="side-header double-header">Size</th>
+                        <th>Ha</th>
+                        <th>STa</th>
+                        <th>TTe</th>
+                        <th>Re</th>
+                        <th>HT</th>
+                        <th>ST</th>
+                        <th>CS</th>
+                        <th>WB</th>
                     </tr>
                     <tr>
-                        <th class="side-header">ST</th>
-                        <td>381/15"</td>
-                        <td>"420/16.5"</td>
-                        <td>458/18"</td>
-                        <td>508/20"</td>
+                        <th class="side-header">S</th>
+                        <td rowspan="3">65.0</td>
+                        <td rowspan="3">73.0</td>
+                        <td>23.0</td>
+                        <td>40.9</td>
+                        <td>3.7</td>
+                        <td>57.7</td>
+                        <td rowspan="3">17.1</td>
+                        <td>45.6</td>
                     </tr>
                     <tr>
-                        <th class="side-header">TTe</th>
-                        <td>560</td>
-                        <td>585</td>
-                        <td>611</td>
-                        <td>632</td>
+                        <th class="side-header">M</th>
+                        <td>24.4</td>
+                        <td>44.4</td>
+                        <td>3.7</td>
+                        <td>57.7</td>
+                        <td>46.9</td>
                     </tr>
                     <tr>
-                        <th class="side-header">HT</th>
-                        <td>105</td>
-                        <td>105</td>
-                        <td>110</td>
-                        <td>115</td>
-                    </tr>
-                    <tr>
-                        <th class="side-header">Ha</th>
-                        <td colspan="4">65</td>
-                    </tr>
-                    <tr>
-                        <th class="side-header">WB</th>
-                        <td>1162</td>
-                        <td>1187</td>
-                        <td>1214</td>
-                        <td>1236</td>
-                    </tr>
-                    <tr>
-                        <th class="side-header">CS</th>
-                        <td colspan="4">435</td>
-                    </tr>
-                    <tr>
-                        <th class="side-header">STa</th>
-                        <td colspan="4">75.5</td>
-                    </tr>
-                    <tr>
-                        <th class="side-header">BB</th>
-                        <td colspan="4">-10</td>
-                    </tr>
-                    <tr>
-                        <th class="side-header">Re</th>
-                        <td>410</td>
-                        <td>435</td>
-                        <td>460</td>
-                        <td>480</td>
+                        <th class="side-header">L</th>
+                        <td>25.2</td>
+                        <td>45.8</td>
+                        <td>4.5</td>
+                        <td>59.5</td>
+                        <td>47.9</td>
                     </tr>
                 </table>
             </section>
-        <section class="detailed-description description">
-            <h2>Подробное описание</h2>
-            <ul>
-                <li>Активная и эффективная конструкция подвески Maestro оптимизирована для 27.5-дюймовых колесных</li>
-                <li>Стабильная 65-градусная геометрия headtube/seattube, низкий центр тяжести
-                    и более длинную колесную базу для бескомпромиссной езды</li>
-                <li>Воздушный или пружинный амортизатор в зависимости от конструкции рамы</li>
-            </ul>
-            <p>Сколько весит этот велосипед? Это частозадаваемый и&nbsp;правильный вопрос. Но&nbsp;на&nbsp;самом деле
-            в&nbsp;велосипедной промышленности нет единых стандартов для измерения веса велосипедов, и&nbsp;это часто приводит
-            к&nbsp;дезинформации. Общий вес велосипеда варьируется в&nbsp;зависимости от&nbsp;размера, материала рамы, покраски,
-            навесного оборудования и&nbsp;т.д. Мы&nbsp;в&nbsp;Giant считаем, что единственный верный способ узнать точный вес
-            того или иного велосипеда&nbsp;&mdash; обратиться в&nbsp;ближайший магазин Giant.</p>
-        </section>
+            <section class="detailed-description description">
+                <h2>Подробное описание</h2>
+                <ul>
+                    <li>Активная и эффективная конструкция подвески Maestro оптимизирована для 27.5-дюймовых колесных</li>
+                    <li>Стабильная 65-градусная геометрия headtube/seattube, низкий центр тяжести
+                        и более длинную колесную базу для бескомпромиссной езды</li>
+                    <li>Воздушный или пружинный амортизатор в зависимости от конструкции рамы</li>
+                </ul>
+                <p>Сколько весит этот велосипед? Это частозадаваемый и&nbsp;правильный вопрос. Но&nbsp;на&nbsp;самом деле
+                в&nbsp;велосипедной промышленности нет единых стандартов для измерения веса велосипедов, и&nbsp;это часто приводит
+                к&nbsp;дезинформации. Общий вес велосипеда варьируется в&nbsp;зависимости от&nbsp;размера, материала рамы, покраски,
+                навесного оборудования и&nbsp;т.д. Мы&nbsp;в&nbsp;Giant считаем, что единственный верный способ узнать точный вес
+                того или иного велосипеда&nbsp;&mdash; обратиться в&nbsp;ближайший магазин Giant.</p>
+            </section>
+        </main>
         <footer class="page-footer">
             <div class="copyright">
                 &copy; &laquo;BikeGang&raquo;, 2016. Все права защищены.
