--- a/products/nukeproof-mega-team.html
+++ b/products/nukeproof-mega-team.html
@@ -63,7 +63,7 @@
                 <img src="../img/geometry.png" alt="Геометрия рамы" title="Геометрия рамы" width="480" height="334">
                 <table>
                     <tr>
-                        <th class="side-header double-th">Key</th>
+                        <th class="side-header double-header">Key</th>
                         <th>Small</th>
                         <th>Medium</th>
                         <th>Large</th>
