--- a/products/giant-reign-1.html
+++ b/products/giant-reign-1.html
@@ -5,6 +5,7 @@
         <title>Giant Reign 1 (2016)</title>
         <link rel="stylesheet" href="../css/style.css">
         <link href="https://fonts.googleapis.com/css?family=PT+Serif&subset=cyrillic-ext" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Ruslan+Display&subset=cyrillic" rel="stylesheet">
     </head>
     <body>
         <header class="page-header">
