Добавлен центровщик, задана высота футер

--- a/index.html
+++ b/index.html
@@ -8,24 +8,26 @@
     </head>
     <body>
         <header class="page-header">
-            <div class="logo">
-                <img src="img/bikegang-logo.png" alt="Bike Gang logo" title="Bike Gang">
+            <div class="container">
+                <div class="logo">
+                    <img src="img/bikegang-logo.png" alt="Bike Gang logo" title="Bike Gang">
+                </div>
+                <nav class="main-menu">
+                    <ul>
+                        <li class="active-page">
+                            <a href="#">Главная</a>
+                        </li>
+                        <li>
+                            <a href="catalog.html">Каталог</a>
+                        </li>
+                        <li>
+                            <a href="contacts.html">Контакты</a>
+                        </li>
+                    </ul>
+                </nav>
             </div>
-            <nav class="main-menu">
-                <ul>
-                    <li class="active-page">
-                        <a href="#">Главная</a>
-                    </li>
-                    <li>
-                        <a href="catalog.html">Каталог</a>
-                    </li>
-                    <li>
-                        <a href="contacts.html">Контакты</a>
-                    </li>
-                </ul>
-            </nav>
         </header>
-        <main>
+        <main class="container">
             <p>Товарищ! Мы рады тебя приветствовать на сайте лучшего веломагазина.</p>
             <h2>Почему мы лучшие?</h2>
             <h3>Комплектующие от топовых производителей</h3>
@@ -41,8 +43,10 @@
             <p>&laquo;Велобанда&raquo; любит и&nbsp;заботится о&nbsp;своих клиентах. Поэтому мы&nbsp;постоянно устраиваем акции и&nbsp;предоставляем особые условия нашим клиентам.</p>
         </main>
         <footer class="page-footer">
-            <div class="copyright">
-                &copy; &laquo;BikeGang&raquo;, 2016. Все права защищены.
+            <div class="container">
+                <div class="copyright">
+                    &copy; &laquo;BikeGang&raquo;, 2016. Все права защищены.
+                </div>
             </div>
         </footer>
     </body>
