Добавлена распорка, пункт меню "Вход", белый текст логотипа

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     </head>
     <body>
         <header class="page-header">
-            <div class="container">
+            <div class="container clearfix">
                 <div class="logo">
-                    <img src="img/bikegang-logo.png" alt="Bike Gang logo" title="Bike Gang">
+                    <img src="img/bikegang-logo-white.png" alt="Bike Gang logo" title="Bike Gang">
                 </div>
                 <nav class="main-menu">
                     <ul>
