Отступы логотипа и меню

--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
                         <li>
                             <a href="contacts.html">Контакты</a>
                         </li>
+                        <li>
+                            <a href="#">Вход</a>
+                        </li>
                     </ul>
                 </nav>
             </div>
