Добавил блок соц сетей, убрал рамку у ссылок меню

--- a/index.html
+++ b/index.html
@@ -13,6 +13,13 @@
                 <div class="logo">
                     <img src="img/bikegang-logo-white.png" alt="Bike Gang logo" title="Bike Gang">
                 </div>
+                <div class="social">
+                    <a href="#">facebook</a>
+                    <a href="#">twitter</a>
+                    <a href="#">instagramm</a>
+                    <a href="#">google</a>
+                    <a href="#">tumblr</a>
+                </div>
                 <nav class="main-menu">
                     <ul>
                         <li class="active-page">
