Добавил классы для левой и правой колонок сетки

--- a/index.html
+++ b/index.html
@@ -10,32 +10,34 @@
     <body>
         <header class="page-header">
             <div class="container clearfix">
-                <div class="logo">
+                <div class="logo right-col">
                     <img src="img/bikegang-logo-white.png" alt="Bike Gang logo" title="Bike Gang">
                 </div>
-                <div class="social">
-                    <a href="#">facebook</a>
-                    <a href="#">twitter</a>
-                    <a href="#">instagramm</a>
-                    <a href="#">google</a>
-                    <a href="#">tumblr</a>
+                <div class="left-col">
+                    <div class="social">
+                        <a href="#">facebook</a>
+                        <a href="#">twitter</a>
+                        <a href="#">instagramm</a>
+                        <a href="#">google</a>
+                        <a href="#">tumblr</a>
+                    </div>
+                    <nav class="main-menu">
+                        <ul>
+                            <li class="active-page">
+                                <a href="#">Главная</a>
+                            </li>
+                            <li>
+                                <a href="catalog.html">Каталог</a>
+                            </li>
+                            <li>
+                                <a href="contacts.html">Контакты</a>
+                            </li>
+                            <li>
+                                <a href="#">Вход</a>
+                            </li>
+                        </ul>
+                    </nav>
                 </div>
-                <nav class="main-menu">
-                    <ul>
-                        <li class="active-page">
-                            <a href="#">Главная</a>
-                        </li>
-                        <li>
-                            <a href="catalog.html">Каталог</a>
-                        </li>
-                        <li>
-                            <a href="contacts.html">Контакты</a>
-                        </li>
-                        <li>
-                            <a href="#">Вход</a>
-                        </li>
-                    </ul>
-                </nav>
             </div>
         </header>
         <main class="container">
