--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <body>
         <header class="page-header">
             <div class="container clearfix">
-                <div class="logo right-col">
+                <div class="logo left-col">
                     <img src="img/bikegang-logo-white.png" alt="Bike Gang logo" title="Bike Gang">
                 </div>
-                <div class="left-col">
+                <div class="right-col">
                     <div class="social">
                         <a href="#">facebook</a>
                         <a href="#">twitter</a>
