Добавил спрайт для соц сетей, задал классы их кнопкам

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
                 </div>
                 <div class="right-col">
                     <div class="social">
-                        <a href="#">facebook</a>
-                        <a href="#">twitter</a>
-                        <a href="#">instagramm</a>
-                        <a href="#">google</a>
-                        <a href="#">tumblr</a>
+                        <a class="social-btn social-btn-fb" href="#">facebook</a>
+                        <a class="social-btn social-btn-tw" href="#">twitter</a>
+                        <a class="social-btn social-btn-inst" href="#">instagramm</a>
+                        <a class="social-btn social-btn-google" href="#">google</a>
+                        <a class="social-btn social-btn-tumblr" href="#">tumblr</a>
                     </div>
                     <nav class="main-menu">
                         <ul>
