--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
     <body>
         <header class="page-header">
             <div class="container clearfix">
-                <div class="logo left-col">
-                    <img src="img/bikegang-logo-white.png" alt="Bike Gang logo" title="Bike Gang">
+                <div class="left-col">
+                    <div class="logo">
+                        <img src="img/bikegang-logo-white.png" alt="Bike Gang logo" title="Bike Gang">
+                    </div>
                 </div>
                 <div class="right-col">
                     <div class="social">
