--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <div class="social">
                         <a class="social-btn social-btn-fb" href="#">facebook</a>
                         <a class="social-btn social-btn-tw" href="#">twitter</a>
-                        <a class="social-btn social-btn-inst" href="#">instagramm</a>
+                        <a class="social-btn social-btn-inst" href="#">instagram</a>
                         <a class="social-btn social-btn-google" href="#">google</a>
                         <a class="social-btn social-btn-tumblr" href="#">tumblr</a>
                     </div>
