Добавлен соц блок в футер

--- a/index.html
+++ b/index.html
@@ -62,6 +62,13 @@
                 <div class="copyright">
                     &copy; &laquo;BikeGang&raquo;, 2016. Все права защищены.
                 </div>
+                <div class="social">
+                    <a class="social-btn social-btn-fb" href="#">facebook</a>
+                    <a class="social-btn social-btn-tw" href="#">twitter</a>
+                    <a class="social-btn social-btn-inst" href="#">instagram</a>
+                    <a class="social-btn social-btn-google" href="#">google</a>
+                    <a class="social-btn social-btn-tumblr" href="#">tumblr</a>
+                </div>
             </div>
         </footer>
     </body>
