--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <p>&laquo;Велобанда&raquo; любит и&nbsp;заботится о&nbsp;своих клиентах. Поэтому мы&nbsp;постоянно устраиваем акции и&nbsp;предоставляем особые условия нашим клиентам.</p>
         </main>
         <footer class="page-footer">
-            <div class="container">
+            <div class="container clearfix">
                 <div class="copyright">
                     &copy; &laquo;BikeGang&raquo;, 2016. Все права защищены.
                 </div>
