--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <footer class="page-footer">
             <div class="container clearfix">
                 <div class="copyright">
-                    &copy; &laquo;BikeGang&raquo;, 2016. Все права защищены.
+                    &copy; 2016 &laquo;BikeGang&raquo;. Все права защищены.
                 </div>
                 <div class="social">
                     <a class="social-btn social-btn-fb" href="#">facebook</a>
