Обновил футер на всех страницах

--- a/catalog.html
+++ b/catalog.html
@@ -33,8 +33,17 @@
             <a href="products/nukeproof-mega-team.html">Nukeproof Mega Team (2016)</a>
         </main>
         <footer class="page-footer">
-            <div class="copyright">
-                &copy; &laquo;BikeGang&raquo;, 2016. Все права защищены.
+            <div class="container clearfix">
+                <div class="copyright">
+                    &copy; 2016 &laquo;BikeGang&raquo;. Все права защищены
+                </div>
+                <div class="social">
+                    <a class="social-btn social-btn-fb" href="#">facebook</a>
+                    <a class="social-btn social-btn-tw" href="#">twitter</a>
+                    <a class="social-btn social-btn-inst" href="#">instagram</a>
+                    <a class="social-btn social-btn-google" href="#">google</a>
+                    <a class="social-btn social-btn-tumblr" href="#">tumblr</a>
+                </div>
             </div>
         </footer>
     </body>
