--- a/contacts.html
+++ b/contacts.html
@@ -51,8 +51,17 @@
             <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?sid=KZ06KogBmuO5fiy1vP2HIxlN6IRDv9g3&amp;width=100%&amp;height=240&amp;lang=ru_RU&amp;sourceType=constructor&amp;scroll=true"></script>
         </main>
         <footer class="page-footer">
-            <div class="copyright">
-                &copy; &laquo;BikeGang&raquo;, 2016. Все права защищены.
+            <div class="container clearfix">
+                <div class="copyright">
+                    &copy; 2016 &laquo;BikeGang&raquo;. Все права защищены
+                </div>
+                <div class="social">
+                    <a class="social-btn social-btn-fb" href="#">facebook</a>
+                    <a class="social-btn social-btn-tw" href="#">twitter</a>
+                    <a class="social-btn social-btn-inst" href="#">instagram</a>
+                    <a class="social-btn social-btn-google" href="#">google</a>
+                    <a class="social-btn social-btn-tumblr" href="#">tumblr</a>
+                </div>
             </div>
         </footer>
     </body>
