--- a/contacts.html
+++ b/contacts.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Контакты</title>
+        <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/style.css">
         <link href="https://fonts.googleapis.com/css?family=PT+Serif&subset=cyrillic-ext" rel="stylesheet">
     </head>
