--- a/products/nukeproof-mega-team.html
+++ b/products/nukeproof-mega-team.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Nukeproof Mega 275 Team (2016)</title>
+        <link rel="stylesheet" href="../css/normalize.css">
         <link rel="stylesheet" href="../css/style.css">
         <link href="https://fonts.googleapis.com/css?family=PT+Serif&subset=cyrillic-ext" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Ruslan+Display&subset=cyrillic" rel="stylesheet">
