одинаковый хедер на всех страницах, подправил ссылки, изменил стиль для активной стр

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
                     </div>
                     <nav class="main-menu">
                         <ul>
-                            <li class="active-page">
-                                <a href="#">Главная</a>
+                            <li>
+                                <a class="active-page" href="#">Главная</a>
                             </li>
                             <li>
                                 <a href="catalog.html">Каталог</a>
