--- a/contacts.html
+++ b/contacts.html
@@ -9,22 +9,38 @@
     </head>
     <body>
         <header class="page-header">
-            <div class="logo">
-                <a href="index.html"><img src="img/bikegang-logo.png" alt="Bike Gang logo" title="Bike Gang"></a>
+            <div class="container clearfix">
+                <div class="left-col">
+                    <div class="logo">
+                        <img src="img/bikegang-logo-white.png" alt="Bike Gang logo" title="Bike Gang">
+                    </div>
+                </div>
+                <div class="right-col">
+                    <div class="social">
+                        <a class="social-btn social-btn-fb" href="#">facebook</a>
+                        <a class="social-btn social-btn-tw" href="#">twitter</a>
+                        <a class="social-btn social-btn-inst" href="#">instagram</a>
+                        <a class="social-btn social-btn-google" href="#">google</a>
+                        <a class="social-btn social-btn-tumblr" href="#">tumblr</a>
+                    </div>
+                    <nav class="main-menu">
+                        <ul>
+                            <li>
+                                <a href="index.html">Главная</a>
+                            </li>
+                            <li>
+                                <a href="catalog.html">Каталог</a>
+                            </li>
+                            <li>
+                                <a class="active-page" href="contacts.html">Контакты</a>
+                            </li>
+                            <li>
+                                <a href="#">Вход</a>
+                            </li>
+                        </ul>
+                    </nav>
+                </div>
             </div>
-            <nav class="main-menu">
-                <ul>
-                    <li>
-                        <a href="index.html">Главная</a>
-                    </li>
-                    <li>
-                        <a href="catalog.html">Каталог</a>
-                    </li>
-                    <li class="active-page">
-                        <a href="#">Контакты</a>
-                    </li>
-                </ul>
-            </nav>
         </header>
         <main>
             <h2>Напишите нам</h2>
