отцентровал содержимое всех страниц

--- a/catalog.html
+++ b/catalog.html
@@ -42,7 +42,7 @@
                 </div>
             </div>
         </header>
-        <main>
+        <main class="container">
             <h1>Каталог</h1>
             <a href="products/giant-reign-1.html"><img src="img/reign-275-1.jpg" alt="Giant Reign 1 (2016)" title="Giant Reign 1 (2016)" width="240" height="160"></a><br>
             <a href="products/giant-reign-1.html">Giant Reign 1 (2016)</a><br><br>
