--- a/products/nukeproof-mega-team.html
+++ b/products/nukeproof-mega-team.html
@@ -43,7 +43,7 @@
                 </div>
             </div>
         </header>
-        <main>
+        <main class="container">
             <h1>Nukeproof Mega 275 Team (2016)</h1>
             <a href="../img/mega-275-team.jpg" target="_blank">
                 <img class="main-item-image" src="../img/mega-275-team.jpg" width="480px" height="320" alt="Nukeproof Mega 275 Team (2016)" title="Nukeproof Mega 275 Team (2016)">
