--- a/contacts.html
+++ b/contacts.html
@@ -42,7 +42,7 @@
                 </div>
             </div>
         </header>
-        <main>
+        <main class="container">
             <h2>Напишите нам</h2>
             <form class="contact-us" action="http://geekbrains.ru" method="post">
                 <fieldset>
