--- a/products/giant-reign-1.html
+++ b/products/giant-reign-1.html
@@ -43,7 +43,7 @@
                 </div>
             </div>
         </header>
-        <main>
+        <main class="container">
             <h1>Giant Reign 1 (2016)</h1>
             <a href="../img/reign-275-1.jpg" target="_blank">
                 <img class="main-item-image" src="../img/reign-275-1.jpg" width="480px" height="320" alt="Giant Reign 1 (2016)" title="Giant Reign 1 (2016)">
