Обернул товары в ссылки, расположил рядом

--- a/catalog.html
+++ b/catalog.html
@@ -42,12 +42,16 @@
                 </div>
             </div>
         </header>
-        <main class="container">
+        <main class="catalog container">
             <h1>Каталог</h1>
-            <a href="products/giant-reign-1.html"><img src="img/reign-275-1.jpg" alt="Giant Reign 1 (2016)" title="Giant Reign 1 (2016)" width="240" height="160"></a><br>
-            <a href="products/giant-reign-1.html">Giant Reign 1 (2016)</a><br><br>
-            <a href="products/nukeproof-mega-team.html"><img src="img/mega-275-team.jpg" alt="Nukeproof Mega Team (2016)" title="Nukeproof Mega Team (2016)" width="240" height="160"></a><br>
-            <a href="products/nukeproof-mega-team.html">Nukeproof Mega Team (2016)</a>
+            <a class="catalog-item" href="products/giant-reign-1.html">
+                <img src="img/reign-275-1.jpg" alt="Giant Reign 1 (2016)" title="Giant Reign 1 (2016)" width="240" height="160">
+                <h3>Giant Reign 1 (2016)</h3>
+            </a>
+            <a class="catalog-item" href="products/giant-reign-1.html">
+                <img src="img/mega-275-team.jpg" alt="Nukeproof Mega Team (2016)" title="Nukeproof Mega Team (2016)" width="240" height="160">
+                <h3>Nukeproof Mega Team (2016)</h3>
+            </a>
         </main>
         <footer class="page-footer">
             <div class="container clearfix">
