--- a/products/giant-reign-1.html
+++ b/products/giant-reign-1.html
@@ -45,13 +45,17 @@
         </header>
         <main class="container">
             <h1>Giant Reign 1 (2016)</h1>
-            <a href="../img/reign-275-1.jpg" target="_blank">
-                <img class="main-item-image" src="../img/reign-275-1.jpg" width="480px" height="320" alt="Giant Reign 1 (2016)" title="Giant Reign 1 (2016)">
-            </a>
-            <section class="short-description description">
-                <h2>Описание товара</h2>
-                <p>В&nbsp;основе этого агрессивного велосипеда лежит ALUXX&nbsp;SL-рама, переработанная с&nbsp;нуля под 27.5-дюймовую технологию колеса. Фреймсет Reign&nbsp;27.5 задает технологиям аллюминиевых полно-подвесных велосипедов новую планку веса, прочности и&nbsp;производительности, используя максимум от&nbsp;этого превосходного размера колеса.</p>
-            </section>
+            <div class="left-col">
+                <a href="../img/reign-275-1.jpg" target="_blank">
+                    <img class="main-item-image" src="../img/reign-275-1.jpg" width="480px" height="320" alt="Giant Reign 1 (2016)" title="Giant Reign 1 (2016)">
+                </a>
+            </div>
+            <div class="right-col">
+                <section class="short-description description">
+                    <h2>Описание товара</h2>
+                    <p>В&nbsp;основе этого агрессивного велосипеда лежит ALUXX&nbsp;SL-рама, переработанная с&nbsp;нуля под 27.5-дюймовую технологию колеса. Фреймсет Reign&nbsp;27.5 задает технологиям аллюминиевых полно-подвесных велосипедов новую планку веса, прочности и&nbsp;производительности, используя максимум от&nbsp;этого превосходного размера колеса.</p>
+                </section>
+            </div>
             <section class="features description">
                 <h2>Характеристики товара</h2>
                 <ul>
