Заменил ссылку на нюкпруф

--- a/catalog.html
+++ b/catalog.html
@@ -48,7 +48,7 @@
                 <img src="img/reign-275-1.jpg" alt="Giant Reign 1 (2016)" title="Giant Reign 1 (2016)" width="240" height="160">
                 <h3>Giant Reign 1 (2016)</h3>
             </a>
-            <a class="catalog-item" href="products/giant-reign-1.html">
+            <a class="catalog-item" href="products/nukeproof-mega-team.html">
                 <img src="img/mega-275-team.jpg" alt="Nukeproof Mega Team (2016)" title="Nukeproof Mega Team (2016)" width="240" height="160">
                 <h3>Nukeproof Mega Team (2016)</h3>
             </a>
