--- a/products/nukeproof-mega-team.html
+++ b/products/nukeproof-mega-team.html
@@ -45,13 +45,17 @@
         </header>
         <main class="container">
             <h1>Nukeproof Mega 275 Team (2016)</h1>
-            <a href="../img/mega-275-team.jpg" target="_blank">
-                <img class="main-item-image" src="../img/mega-275-team.jpg" width="480px" height="320" alt="Nukeproof Mega 275 Team (2016)" title="Nukeproof Mega 275 Team (2016)">
-            </a>
-            <section class="short-description description">
-                <h2>Описание товара</h2>
-                <p>Настоящий гоночный байк для настоящих гор!</p>
-            </section>
+            <div class="left-col">
+                <a href="../img/mega-275-team.jpg" target="_blank">
+                    <img class="main-item-image" src="../img/mega-275-team.jpg" width="480px" height="320" alt="Nukeproof Mega 275 Team (2016)" title="Nukeproof Mega 275 Team (2016)">
+                </a>
+            </div>
+            <div class="right-col">
+                <section class="short-description description">
+                    <h2>Описание товара</h2>
+                    <p>Настоящий гоночный байк для настоящих гор!</p>
+                </section>
+            </div>
             <section class="features description">
                 <h2>Характеристики товара</h2>
                 <ul>
