--- a/products/nukeproof-mega-team.html
+++ b/products/nukeproof-mega-team.html
@@ -82,67 +82,73 @@
             </section>
             <section class="frame-geometry description">
                 <h2>Геометрия</h2>
-                <img src="../img/geometry.png" alt="Геометрия рамы" title="Геометрия рамы" width="480" height="334">
-                <table>
-                    <tr>
-                        <th class="side-header double-header">Key</th>
-                        <th>Small</th>
-                        <th>Medium</th>
-                        <th>Large</th>
-                        <th>Extra Large</th>
-                    </tr>
-                    <tr>
-                        <th class="side-header">ST</th>
-                        <td>381/15"</td>
-                        <td>"420/16.5"</td>
-                        <td>458/18"</td>
-                        <td>508/20"</td>
-                    </tr>
-                    <tr>
-                        <th class="side-header">TTe</th>
-                        <td>560</td>
-                        <td>585</td>
-                        <td>611</td>
-                        <td>632</td>
-                    </tr>
-                    <tr>
-                        <th class="side-header">HT</th>
-                        <td>105</td>
-                        <td>105</td>
-                        <td>110</td>
-                        <td>115</td>
-                    </tr>
-                    <tr>
-                        <th class="side-header">Ha</th>
-                        <td colspan="4">65</td>
-                    </tr>
-                    <tr>
-                        <th class="side-header">WB</th>
-                        <td>1162</td>
-                        <td>1187</td>
-                        <td>1214</td>
-                        <td>1236</td>
-                    </tr>
-                    <tr>
-                        <th class="side-header">CS</th>
-                        <td colspan="4">435</td>
-                    </tr>
-                    <tr>
-                        <th class="side-header">STa</th>
-                        <td colspan="4">75.5</td>
-                    </tr>
-                    <tr>
-                        <th class="side-header">BB</th>
-                        <td colspan="4">-10</td>
-                    </tr>
-                    <tr>
-                        <th class="side-header">Re</th>
-                        <td>410</td>
-                        <td>435</td>
-                        <td>460</td>
-                        <td>480</td>
-                    </tr>
-                </table>
+                <div class="frame-geometry-content">
+                    <div class="left-col">
+                        <img src="../img/geometry.png" alt="Геометрия рамы" title="Геометрия рамы" width="480" height="334">
+                    </div>
+                    <div class="right-col">
+                        <table>
+                            <tr>
+                                <th class="side-header double-header">Key</th>
+                                <th>Small</th>
+                                <th>Medium</th>
+                                <th>Large</th>
+                                <th>Extra Large</th>
+                            </tr>
+                            <tr>
+                                <th class="side-header">ST</th>
+                                <td>381/15"</td>
+                                <td>"420/16.5"</td>
+                                <td>458/18"</td>
+                                <td>508/20"</td>
+                            </tr>
+                            <tr>
+                                <th class="side-header">TTe</th>
+                                <td>560</td>
+                                <td>585</td>
+                                <td>611</td>
+                                <td>632</td>
+                            </tr>
+                            <tr>
+                                <th class="side-header">HT</th>
+                                <td>105</td>
+                                <td>105</td>
+                                <td>110</td>
+                                <td>115</td>
+                            </tr>
+                            <tr>
+                                <th class="side-header">Ha</th>
+                                <td colspan="4">65</td>
+                            </tr>
+                            <tr>
+                                <th class="side-header">WB</th>
+                                <td>1162</td>
+                                <td>1187</td>
+                                <td>1214</td>
+                                <td>1236</td>
+                            </tr>
+                            <tr>
+                                <th class="side-header">CS</th>
+                                <td colspan="4">435</td>
+                            </tr>
+                            <tr>
+                                <th class="side-header">STa</th>
+                                <td colspan="4">75.5</td>
+                            </tr>
+                            <tr>
+                                <th class="side-header">BB</th>
+                                <td colspan="4">-10</td>
+                            </tr>
+                            <tr>
+                                <th class="side-header">Re</th>
+                                <td>410</td>
+                                <td>435</td>
+                                <td>460</td>
+                                <td>480</td>
+                            </tr>
+                        </table>
+                    </div>
+                </div>
             </section>
             <section class="detailed-description description">
                 <h2>Подробное описание</h2>
