--- a/products/giant-reign-1.html
+++ b/products/giant-reign-1.html
@@ -55,6 +55,10 @@
                     <h2>Описание товара</h2>
                     <p>В&nbsp;основе этого агрессивного велосипеда лежит ALUXX&nbsp;SL-рама, переработанная с&nbsp;нуля под 27.5-дюймовую технологию колеса. Фреймсет Reign&nbsp;27.5 задает технологиям аллюминиевых полно-подвесных велосипедов новую планку веса, прочности и&nbsp;производительности, используя максимум от&nbsp;этого превосходного размера колеса.</p>
                 </section>
+                <div class="btn-block">
+                    <a href="#" class="btn">Купить</a>
+                    <a href="#" class="btn">Купить в 1 клик</a>
+                </div>
             </div>
             <section class="features description">
                 <h2>Характеристики товара</h2>
